--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,88 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
+}
+
+/* sej */
+.Popup {
+  width: 300px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  margin: 0 auto;
+  border: 1px solid gray;
+}
+.Popup .Popup_img {
+  width: 100%;
+  height: 150px;
+  object-fit: contain;
+  object-position: top;
+}
+.Popup .Popup_img_view {
+  width: 100%;
+  cursor: pointer;
+}
+
+.Popup .Popup_close {
+  display: flex;
+  align-items: center;
+  justify-content: end;
+}
+.Popup .Popup_close button {
+  border: none;
+  background-color: transparent;
+  font-size: 20px;
+  padding: 5px 10px;
+}
+.Popup .Popup_close_view {
+  width: 100%;
+}
+.Popup .Popup_close_view button {
+  width: 100%;
+  padding: 5px 10px;
+  font-size: 20px;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+.Popup .Popup_content {
+  width: calc(100% - 40px);
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  margin: 10px 20px;
+}
+
+.Popup .Popup_icon {
+  width: 50px;
+  height: 50px;
+}
+
+.Popup .Popup_text {
+  text-align: left;
+  flex-grow: 1;
+  padding: 5px 15px;
+}
+.Popup .Popup_text h4 {
+  margin: 0;
+}
+
+.Popup .Popup_actions {
+  width: calc(100% - 40px);
+  /* display: flex;
+  align-items: center;
+  justify-content: space-between; */
+  display: grid;
+  grid-template-columns: repeat(2, auto);
+  gap: 2%;
+  padding-bottom: 15px;
+}
+.Popup .Popup_actions button {
+padding: 5px 15px;
 }
